Fixed overlap issue

--- a/css/site.css
+++ b/css/site.css
@@ -149,7 +149,7 @@ html, body {
 	border-bottom: none;
 	background-color: #AFA8A0;
 	list-style-type: none;
-	z-index: 1;
+	z-index: 100;
 }
 
 #menu .submenu li {
